# wr_ws

./: .gitignore  .gitmodules  README.md  README.me
src/cnc_interface/: CMakeLists.txt  README.md  package.xml
src/cnc_interface/launch/: custom.launch  smoothie-shapeoko.launch
src/cnc_interface/scripts/: cnc_class.py  cnc_interface.py
src/dummy_welder/: CMakeLists.txt  fsm log  package.xml
src/dummy_welder/scripts/: dummy_welder.py  fsm.py  laser_fsm.py  welder_class.py  welder_fsm.py
src/laser_ctrl/: CMakeLists.txt  package.xml
src/laser_ctrl/scripts/: laser_ctrl.py
src/line_detection/: CMakeLists.txt  message format dummy data  package.xml
src/line_detection/scripts/: line_detection_batch_query.py  line_detection_batch_stream.py
src/spinnaker_sdk_camera_driver/: version.md
src/spinnaker_sdk_camera_driver/launch/: custom.launch
src/spinnaker_sdk_camera_driver/params/: custom_params.yaml
src/welder-gui/: README  mainwindow.cpp  mainwindow.h  welder-gui.pro  welder-gui.pro.user.fd62ad0  welder-gui.ui
src/welder_node_gui/: CMakeLists.txt  package.xml  plugin.xml
src/welder_node_gui/resource/: gui.ui  imgs
src/welder_node_gui/scripts/: welder_node_gui.py
src/welder_node_gui/src/welder_node_gui/: welder_gui.py
